--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  --pixel-size: 42px;
+  --gap: 1px;
 }
 
 a {
@@ -94,4 +96,27 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+.pixel-grid {
+  display: grid;
+  grid-template-columns: repeat(4, var(--pixel-size));
+  gap: var(--gap);
+  margin-bottom: 12px;
+}
+
+.pixel {
+  width: var(--pixel-size);
+  height: var(--pixel-size);
+  border: 1px solid #999;
+  cursor: pointer;
+  background-color: white;
+  transition: background-color 120ms ease-in-out;
+}
+
+.pixel.on {
+  background-color: black;
+}
+
+h2 {
+  margin: 8px 0;
 }
