--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  /*
+    Pixelgröße und Abstand für das Pixel-Grid
+  */
   --pixel-size: 42px;
   --gap: 1px;
 }
